--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          run: npm ci
+      - name: Install dependencies
+        run: npm ci
       - name: Run the tests
         run: npm test
